Fixes z-index bug and rounded borders

--- a/nengo_gui/static/ace.css
+++ b/nengo_gui/static/ace.css
@@ -10,10 +10,12 @@
     position: fixed;
     float:right;
     right: 0;
-    z-index: 99998;
+    z-index: 99997;
     border-left:5px solid #606060;
     border-top:5px solid #606060;
+    border-radius: 0px;
     background: #ddd;
     font-family: monospace;
     overflow: auto;
+
 }
